--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
     <div class="row">
         <div class="col-lg-4">
             ​<picture>
-                <img src="/waterfall.jpeg" class="img-fluid img-thumbnail" alt="Waterfall">
+                <img src="waterfall.jpeg" class="img-fluid img-thumbnail" alt="Waterfall">
             </picture>
         </div>
 
         <div class="col-lg-4">
             ​<picture>
-                <img src="/Lake.jpeg" class="img-fluid img-thumbnail" alt="Waterfall">
+                <img src="Lake.jpeg" class="img-fluid img-thumbnail" alt="Waterfall">
             </picture>
         </div>
 
